--- a/task-03.html
+++ b/task-03.html
@@ -6,12 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task 3</title>
     <link rel="stylesheet" href="css/common.css" />
+    <link rel="stylesheet" href="css/task-3.css" />
   </head>
   <body>
     <p><a href="index.html">Go back</a></p>
 
     <ul class="gallery"></ul>
 
+    
     <script src="js/task-03.js" type="module"></script>
   </body>
 </html>
